[gd_scene load_steps=2 format=3 uid="uid://d7d8d9d0d1d2"]

[ext_resource type="Script" path="res://scripts/ui/dialog_box.gd" id="1_abcde"]

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource("1_abcde")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextLabel" type="Label" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
text = "This is some dialog text."
autowrap_mode = 2

[node name="NameLabel" type="Label" parent="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
text = "Character"
horizontal_alignment = 1

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
